--- a/lib/dune
+++ b/lib/dune
@@ -1,4 +1,7 @@
+ (include_subdirs unqualified)
+
 (library
  (public_name nautilus)
  (name nautilus)
- (libraries dream yojson lwt))
+ (libraries dream yojson lwt)
+ (preprocess (pps lwt_ppx)))
