--- a/test/dune
+++ b/test/dune
@@ -1,2 +1,11 @@
-(test
- (name test_nautilus))
+(include_subdirs unqualified)
+
+(executable
+ (public_name test_runner)
+ (name runner)
+ (libraries ounit2 nautilus dream yojson lwt uuidm caqti caqti-lwt caqti-driver-postgresql)
+ (preprocess (pps lwt_ppx)))
+
+(rule
+ (alias runtest)
+ (action (run ./runner.exe)))
