--- a/test/compose.yml
+++ b/test/compose.yml
@@ -8,6 +8,6 @@ services:
     ports:
       - '5433:5432'
     volumes:
-      - ./migrations:/migrations:ro
+      - ../migrations:/migrations:ro
     tmpfs:
       - /var/lib/postgresql/data
